force-app/main/default/objects/Answer_Row__c/Answer_Row__c.object-meta.xml
<CustomObject>
    <label>Answer Row</label>
    <nameField>
        <displayFormat>AR-{0000}</displayFormat>
        <label>Answer Row Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Answer Rows</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>