force-app/main/default/objects/Answer_Row__c/fields/Answer_Row_Location__c.field-meta.xml
<CustomField>
    <fullName>Answer_Row_Location__c</fullName>
    <label>Answer Row Location</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>