force-app/main/default/objects/Answer_Row__c/fields/Answer_Row_Text__c.field-meta.xml
<CustomField>
    <fullName>Answer_Row_Text__c</fullName>
    <label>Answer Row Text</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>