force-app/main/default/objects/Answer_Row__c/fields/Crossword__c.field-meta.xml
<CustomField>
    <fullName>Crossword__c</fullName>
    <label>Crossword</label>
    <referenceTo>Crossword__c</referenceTo>
    <relationshipLabel>Answer Rows</relationshipLabel>
    <relationshipName>Answer_Row</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>